[gd_scene load_steps=2 format=3 uid="uid://mjwkfxpnwct6"]

[ext_resource type="Script" path="res://scripts/shared/continuous_hitbox.gd" id="1_6bwjt"]

[node name="ContinuousHitbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_6bwjt")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Duration" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_duration_timeout"]
